# media-service

./: .env.example  .gitignore  README.md  celerybeat-schedule  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirments.txt  schema.md  settings.py
.github/workflows/: django.yml
core/: admin.py  models.py
mediaService/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
media_service/: settings.py  urls.py  wsgi.py
news/: admin.py  api_urls.py  apps.py  models.py  renderers.py  serializers.py  tasks.py  urls.py  views.py
news/fixtures/: categories.json  content_items.json  mediaassets.json  posts.json  tags.json  videos.json
news/migrations/: 0001_initial.py  0002_alter_category_type.py  0002_post_created_at_alter_category_slug_and_more.py  0002_remove_category_description_and_more.py  0003_alter_category_type.py  0003_alter_post_lead_alter_post_title_alter_video_lead.py  0003_remove_category_unique_slug_per_parent_and_more.py  0004_alter_post_created_at.py  0005_post_body_json_alter_post_body.py  0006_alter_post_body_json.py  0007_alter_post_body_json.py  0008_alter_post_body_json.py  0009_alter_post_body_json.py  0010_alter_post_body_json.py  0011_alter_post_body_json.py  0012_alter_post_body_json.py  0013_post_news_post_status_01ccc8_idx_and_more.py  0015_remove_category_news_catego_slug_0c9c67_idx_and_more.py  (+5 more)
templates/: base.html  index.html  post_detail.html
tests/: conftest.py  test_api.py  test_api_schema.py  test_integration.py  test_models.py  test_renderer.py  test_serializers.py  test_utils.py  test_views.py
(+35 files in other folders)
